deploy: 0e844b7aa55eef65dfb9382d4c9f254a0ac45998

--- a/to_vid.html
+++ b/to_vid.html
@@ -360,9 +360,9 @@
 </ul>
 <p class="rubric">Edit</p>
 <ul class="simple">
-<li><p>11242021 – initial commit.</p></li>
-<li><p>11262021 – Major change: now convert all the 8-bit folder in given folder to videos Change name to <code class="docutils literal notranslate"><span class="pre">to_vid.py</span></code></p></li>
-<li><p>12082021 – Check if the target .avi file exists already. If so, skip the conversion.</p></li>
+<li><p>Nov 24, 2021 – initial commit.</p></li>
+<li><p>Nov 26, 2021 – Major change: now convert all the 8-bit folder in given folder to videos Change name to <code class="docutils literal notranslate"><span class="pre">to_vid.py</span></code></p></li>
+<li><p>Dec 08, 2021 – Check if the target .avi file exists already. If so, skip the conversion.</p></li>
 </ul>
 </div>
 
