--- a/velocity_autocorr.html
+++ b/velocity_autocorr.html
@@ -370,6 +370,7 @@
 </div></blockquote>
 </li>
 <li><p>Mar 23, 2022 – add smoothn as an optional smoothing method</p></li>
+<li><p>Nov 15, 2022 – Make <code class="docutils literal notranslate"><span class="pre">fps</span></code> and <code class="docutils literal notranslate"><span class="pre">cutoff</span></code> real <em>keyword</em> args.</p></li>
 </ul>
 </div>
 
