deploy: 79e27ae665b43b44684611d3e074ef377b563904

--- a/scripts/gen_preview.html
+++ b/scripts/gen_preview.html
@@ -343,6 +343,7 @@ document.write(`
 <li><p>Dec 06, 2022 – Now save first and last frames for a single nd2. Change of default behavior!</p></li>
 <li><p>Jan 05, 2023 – Adapt myimagelib import style.</p></li>
 <li><p>Feb 08, 2023 – Rewrite in function wrapper form, to make autodoc work properly. (autodoc import the script and execute it, so anything outside <code class="docutils literal notranslate"><span class="pre">if</span> <span class="pre">__name__==&quot;__main__&quot;</span></code> will be executed, causing problems)</p></li>
+<li><p>Jun 01, 2023 – (i) Use argparse for selecting preview frames, (ii) save preview images in the same folder as the nd2 images.</p></li>
 </ul>
 </div>
 
