deploy: f5c0bc8264a43b7fe10b69d35dbb2c2aedd29ad4

--- a/scripts/faster_cropping.html
+++ b/scripts/faster_cropping.html
@@ -329,6 +329,7 @@ document.write(`
 <ul class="simple">
 <li><p>Apr 27, 2023 – Set commandline arguments.</p></li>
 <li><p>Apr 28, 2023 – Wrap in <code class="docutils literal notranslate"><span class="pre">__name__==&quot;__main__&quot;</span></code>.</p></li>
+<li><p>Sep 06, 2023 – Add translation argument <code class="docutils literal notranslate"><span class="pre">--xtranslate</span></code> and <code class="docutils literal notranslate"><span class="pre">--ytranslate</span></code>. Both are lists of integers, specifying the translation of the origins of the cropping regions. They should be in the same length as the <code class="docutils literal notranslate"><span class="pre">angle</span></code> argument.</p></li>
 </ul>
 </div>
 
