deploy: c7a64da97a46ff22afffd1dab39ae9a322c79ecc

--- a/scripts/to_vid.html
+++ b/scripts/to_vid.html
@@ -348,6 +348,7 @@ document.write(`
 <li><p>Jan 05, 2023 – Adapt myimagelib import style.</p></li>
 <li><p>Feb 08, 2023 – Rewrite in function wrapper form, to make autodoc work properly. (autodoc import the script and execute it, so anything outside <code class="docutils literal notranslate"><span class="pre">if</span> <span class="pre">__name__==&quot;__main__&quot;</span></code> will be executed, causing problems)</p></li>
 <li><p>Oct 04, 2024 – Add argument parser to make it more user-friendly. Only convert one video now, instead of all videos in the folder.</p></li>
+<li><p>Oct 17, 2024 – Add a filter to ensure the dimensions are divisible by 2.</p></li>
 </ul>
 </div>
 
